--- a/DnD_Between.wpf/Character_viewer.xaml
+++ b/DnD_Between.wpf/Character_viewer.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DnD_Between.wpf"
         mc:Ignorable="d"
-        Title="Character_viewer" Height="450" Width="800">
+        Title="Character_viewer" Height="850" Width="1000" Top="0" Left="275">
     <Grid>
-        
+        <Label x:Name="LBName" Content="Name" HorizontalAlignment="Left" Margin="50,50,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Content="Strength" HorizontalAlignment="Left" Margin="50,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
+        <Label Content="Dexterity" HorizontalAlignment="Left" Margin="150,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
+        <Label Content="Constitution" HorizontalAlignment="Left" Margin="250,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="125" HorizontalContentAlignment="Center"/>
+        <Label Content="Intelegence" HorizontalAlignment="Left" Margin="375,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="125" HorizontalContentAlignment="Center"/>
+        <Label Content="Wisdom" HorizontalAlignment="Left" Margin="500,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
+        <Label Content="Charisma" HorizontalAlignment="Left" Margin="600,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
+        <Label Content="Walking" HorizontalAlignment="Left" Margin="750,100,0,0" VerticalAlignment="Top" Height="33" FontSize="16" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBSTR" Content="20" HorizontalAlignment="Left" Margin="50,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBDEX" Content="20" HorizontalAlignment="Left" Margin="150,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBCON" Content="20" HorizontalAlignment="Left" Margin="262,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBWIS" Content="20" HorizontalAlignment="Left" Margin="500,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBINT" Content="20" HorizontalAlignment="Left" Margin="388,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBCHA" Content="20" HorizontalAlignment="Left" Margin="600,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
+        <Label x:Name="LBSpeed" Content="20" HorizontalAlignment="Left" Margin="750,133,0,0" VerticalAlignment="Top" FontSize="22" Width="100" HorizontalContentAlignment="Center"/>
     </Grid>
 </Window>
