--- a/DnD_Between.wpf/MainWindow.xaml
+++ b/DnD_Between.wpf/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DnD_Between.wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="450" Width="994">
+    <Grid Margin="0,0,50,0">
         <DataGrid x:Name="dgchar" SelectionChanged="dgchar_SelectionChanged" AutoGenerateColumns="False" HorizontalAlignment="Left" Width="621">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Width="250" Binding="{Binding name}"/>
@@ -15,8 +15,9 @@
                 <DataGridTextColumn Header="Race" Width="163" Binding="{Binding char_race.name}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="BTNCreate" Content="Create" Margin="0,10,10,0" Click="BTNCreate_Click" HorizontalAlignment="Right" Width="150" Height="75" VerticalAlignment="Top"/>
-        <Button x:Name="BTNEdit" Content="Edit" Margin="0,102,10,0" Click="BTNEdit_Click" Height="77" VerticalAlignment="Top" HorizontalAlignment="Right" Width="150"/>
+        <Button x:Name="BTNCreate" Content="Create" Margin="0,10,10,0" Click="BTNCreate_Click" HorizontalAlignment="Right" Width="150" Height="75" VerticalAlignment="Top" FontSize="20"/>
+        <Button x:Name="BTNEdit" Content="Edit" Margin="0,100,10,0" Click="BTNEdit_Click" Height="77" VerticalAlignment="Top" HorizontalAlignment="Right" Width="150" FontSize="20"/>
+        <Button x:Name="BTNView" Content="View Character" HorizontalAlignment="Right" Margin="0,200,10,0" VerticalAlignment="Top" Height="77" Width="150" FontSize="20" Click="BTNView_Click"/>
 
     </Grid>
 </Window>
